feature/learn function closure recursion expression

--- a/Functions/function.html
+++ b/Functions/function.html
@@ -6,10 +6,17 @@
     <title>function</title>
   </head>
   <body>
+    <h1 id="h1id"></h1>
     <!-- <script src="function1.js"></script> -->
     <!-- <script src="function2.js"></script> -->
     <!-- <script src="functionparameter.js"></script> -->
     <!-- <script src="functionreturn.js"></script> -->
-    <script src="function-challenge.js"></script>
+    <!-- <script src="function-challenge.js"></script> -->
+    <!-- <script src="functionexpression.js"></script> -->
+    <!-- <script src="functionscope.js"></script> -->
+    <!-- <script src="function-clousers.js"></script> -->
+    <!-- <script src="function-recursion.js"></script> -->
+    <!-- <script src="gusser-challenge.js"></script> -->
+    <script src="iife.js"></script>
   </body>
 </html>
