--- a/Objects/object.html
+++ b/Objects/object.html
@@ -10,6 +10,7 @@
     <!-- <script src="object2.js"></script> -->
     <!-- <script src="car-object-challenge.js"></script> -->
     <!-- <script src="memory-ref-object.js"></script> -->
-    <script src="object-template-memoryref.js"></script>
+    <!-- <script src="object-template-memoryref.js"></script> -->
+    <script src="object-content-looping.js"></script>
   </body>
 </html>
